SRC/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: predictionapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prediction-flask-app
  template:
    metadata:
      labels:
        app: prediction-flask-app
    spec:
      containers:
      - name: prediction-flask-app
        image: prediction-flask-app:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: predictionapp-service
spec:
  selector:
    app: prediction-flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
