SRC/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: predictionapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: predictionapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service/ingress-nginx-controller-admission
            port:
              number: 443
